# morai-mpc

./: .gitignore  CLAUDE.md  GEMINI.md
devel/: .catkin
devel/include/morai_msgs/: CollisionData.h  CtrlCmd.h  EgoVehicleStatus.h  EventInfo.h  GhostCmd.h  IntersectionControl.h  IntersectionStatus.h  Lamps.h  MapSpec.h  MoraiSimProcHandle.h  MoraiSimProcStatus.h  MoraiSrvResponse.h  MultiEgoSetting.h  NpcGhostCmd.h  ObjectStatusList.h  RadarDetection.h  RadarDetections.h  ReplayInfo.h  SaveSensorData.h  ScenarioLoad.h  SetTrafficLight.h  TrafficLightIndex.h  TrafficLightInfo.h  VehicleCollisionData.h  VehicleSpec.h  VehicleSpecIndex.h
devel/lib/pkgconfig/: morai_msgs.pc  moraimpc.pc
devel/lib/python3/dist-packages/morai_msgs/msg/: _CollisionData.py  _CtrlCmd.py  _EgoVehicleStatus.py  _EventInfo.py  _GhostCmd.py  _IntersectionControl.py  _IntersectionStatus.py  _Lamps.py  _MapSpec.py  _MoraiSimProcHandle.py  _MoraiSimProcStatus.py  _MoraiSrvResponse.py  _MultiEgoSetting.py  _NpcGhostCmd.py  _ObjectStatusList.py  _RadarDetection.py  _RadarDetections.py  _ReplayInfo.py  _SaveSensorData.py  _ScenarioLoad.py  _SetTrafficLight.py  _TrafficLightIndex.py  _TrafficLightInfo.py  _VehicleCollisionData.py  _VehicleSpec.py  _VehicleSpecIndex.py  __init__.py
devel/share/common-lisp/ros/morai_msgs/msg/: CollisionData.lisp  CtrlCmd.lisp  EgoVehicleStatus.lisp  EventInfo.lisp  GhostCmd.lisp  IntersectionControl.lisp  IntersectionStatus.lisp  Lamps.lisp  MapSpec.lisp  MoraiSimProcHandle.lisp  MoraiSimProcStatus.lisp  MoraiSrvResponse.lisp  MultiEgoSetting.lisp  NpcGhostCmd.lisp  ObjectStatusList.lisp  RadarDetection.lisp  RadarDetections.lisp  ReplayInfo.lisp  SaveSensorData.lisp  ScenarioLoad.lisp  SetTrafficLight.lisp  TrafficLightIndex.lisp  TrafficLightInfo.lisp  VehicleCollisionData.lisp  VehicleSpec.lisp  VehicleSpecIndex.lisp  _package.lisp  _package_EgoVehicleStatus.lisp  _package_GhostCmd.lisp  _package_Lamps.lisp  _package_MapSpec.lisp  _package_MoraiSimProcHandle.lisp  _package_MoraiSrvResponse.lisp  _package_SaveSensorData.lisp  _package_ScenarioLoad.lisp  _package_SetTrafficLight.lisp  _package_TrafficLightIndex.lisp  _package_VehicleSpec.lisp  _package_VehicleSpecIndex.lisp  morai_msgs-msg.asd
devel/share/gennodejs/ros/morai_msgs/msg/: CollisionData.js  CtrlCmd.js  EgoVehicleStatus.js  EventInfo.js  GhostCmd.js  IntersectionControl.js  IntersectionStatus.js  Lamps.js  MapSpec.js  MoraiSimProcHandle.js  MoraiSimProcStatus.js  MoraiSrvResponse.js  MultiEgoSetting.js  NpcGhostCmd.js  ObjectStatusList.js  RadarDetection.js  RadarDetections.js  ReplayInfo.js  SaveSensorData.js  ScenarioLoad.js  SetTrafficLight.js  TrafficLightIndex.js  TrafficLightInfo.js  VehicleCollisionData.js  VehicleSpec.js  VehicleSpecIndex.js  _index.js
devel/share/morai_msgs/cmake/: morai_msgs-msg-extras.cmake  morai_msgs-msg-paths.cmake  morai_msgsConfig.cmake
devel/share/moraimpc/cmake/: moraimpcConfig.cmake
devel/share/roseus/ros/morai_msgs/: manifest.l
devel/share/roseus/ros/morai_msgs/msg/: CollisionData.l  CtrlCmd.l  EgoVehicleStatus.l  EventInfo.l  GhostCmd.l  IntersectionControl.l  IntersectionStatus.l  Lamps.l  MapSpec.l  MoraiSimProcHandle.l  MoraiSimProcStatus.l  MoraiSrvResponse.l  MultiEgoSetting.l  NpcGhostCmd.l  ObjectStatusList.l  RadarDetection.l  RadarDetections.l  ReplayInfo.l  SaveSensorData.l  ScenarioLoad.l  SetTrafficLight.l  TrafficLightIndex.l  TrafficLightInfo.l  VehicleCollisionData.l  VehicleSpec.l  VehicleSpecIndex.l
docker/: Dockerfile  Dockerfile.bridge  Dockerfile.ros1  docker-compose.yml  entrypoint.sh  morai_topic_init.py
docker/ros2_morai_msgs/: CMakeLists.txt  package.xml
docker/ros2_morai_msgs/msg/: MoraiSrvResponse.msg
src/bisa/: CMakeLists.txt  package.xml
src/bisa/include/bisa/: mpc_path_tracker_cpp.hpp
src/bisa/msg/: DriveMode.msg  ParkingSpot.msg  ZoneReservation.msg
src/bisa/src/: local_path_pub_cpp.cpp  mpc_path_tracker_cpp.cpp
src/bisa/src/ltv_mpc/: ltv_model.cpp  ltv_mpc.cpp  ltv_types.hpp
src/bisa/src/rti_nmpc/: rti_nmpc.cpp  rti_nmpc.hpp  rti_nmpc_types.hpp
src/morai_msgs/: CMakeLists.txt
src/morai_msgs/msg/: EgoVehicleStatus.msg  MoraiSimProcStatus.msg  MultiEgoSetting.msg
src/moraimpc/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/moraimpc/config/: ioniq5.yaml  rosconsole.config
src/moraimpc/data/: waypoints.json
src/moraimpc/include/moraimpc/: ltv_cost.hpp  ltv_model.hpp  ltv_solver.hpp  ltv_types.hpp  path_follower.hpp
src/moraimpc/launch/: morai_full.launch.py  mpc_tracking.launch  sensor_fusion.launch
src/moraimpc/logs/: mpc_log.json
src/moraimpc/navigation/: hybrid_astar.py  path_file_loader_node.py  path_follower_node.py  path_maker_node.py
src/moraimpc/nodes/: ego_drive.py  eskf_node.py  heading_gui.py  ltv_mpc_follower_v2.py  morai_mode_init.py  path_follower.py  path_maker.py  unified_gui.py
src/moraimpc/parking/: parking_manager_node.py
src/moraimpc/rviz/: mpc_view.rviz
src/moraimpc/scripts/: analyze_mpc.py  mpc_viewer.py  mpc_viz_node.py  open_foxglove.sh
src/moraimpc/sensing/: eskf_node.py  morai_bridge_node.py  sensor_monitor_gui.py
src/moraimpc/src/: ltv_cost.cpp  ltv_model.cpp  ltv_mpc_node.cpp  ltv_solver.cpp  path_follower.cpp
src/moraimpc/visualization/: iridescence_gui_node.py
