<?xml version="1.0"?>
<package format="3">
  <name>moraimpc</name>
  <version>1.0.0</version>
  <description>MORAI Simulator MPC - Ioniq 5 SUV (LTV-MPC + RTI-NMPC + ESKF + Iridescence)</description>
  <maintainer email="todo@todo.todo">maintainer</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
